# smart-city-mono

iot/emulator/: Cargo.toml  TRL-009.yaml
iot/emulator/src/: main.rs
iot/emulator/src/devices/: device.rs  mod.rs
iot/emulator/src/devices/traffic/: data.rs  mod.rs
services/iot-service/: Cargo.toml
