[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-json-core = "0.4"
heapless = { version = "0.7", features = ["serde"] }
mio = "0.7.0"
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
mio_httpc = { version = "0.10.4" }
